fixing the img overlapping

--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -445,7 +445,7 @@ ul.row {
   top: -0.01rem;
   left: -0.1rem;
   right: -0.1rem;
-  /* z-index: 1; */
+  z-index: 1;
 }
 
 .card-work:hover .card-inner {
@@ -469,14 +469,14 @@ ul.row {
 .card-work .card-title a::after {
   position: absolute;
   top: 0;
-  bottom: 0;
   right: 0;
   left: 0;
+  bottom: 0;
   content: "";
 }
 
 .card-work:hover .card-title {
-  opacity: 1;
+  /* opacity: 1; */
 }
 
 .card-testimonial {
